--- a/components/CallOut/CallOut.module.scss
+++ b/components/CallOut/CallOut.module.scss
@@ -3,7 +3,7 @@
     text-align: center;
 
     @media(max-width:767px) {
-        padding: 0 1rem 3.75rem;
+        padding: 2rem 1rem 3.75rem;
     }
 }
 
