--- a/components/Makers/Makers.module.scss
+++ b/components/Makers/Makers.module.scss
@@ -3,7 +3,7 @@
     text-align: center;
 
     @media(max-width:767px) {
-        padding: 0 1rem;
+        padding: 2rem 1rem;
     }
 }
 
