--- a/components/Team/Team.module.scss
+++ b/components/Team/Team.module.scss
@@ -3,7 +3,7 @@
     text-align: center;
 
     @media(max-width:767px) {
-        padding: 0;
+        padding: 2rem 0;
         text-align: left;
     }
 }
